# TinyCppTest

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: build.yml
Example/: assert_test.cpp  example_test.cpp  example_test_2.cpp  main.cpp
Sources/: TinyCppTest.hpp
